--- a/pandas_doc/pandas_advance.ipynb
+++ b/pandas_doc/pandas_advance.ipynb
@@ -581,7 +581,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    ""
+   ]
   },
   {
    "cell_type": "code",
@@ -944,7 +946,6 @@
     {
      "ename": "KeyError",
      "evalue": "'horizontal'",
-     "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
@@ -960,7 +961,8 @@
       "\u001b[1;32mpandas\\_libs\\index.pyx\u001b[0m in \u001b[0;36mpandas._libs.index.IndexEngine.get_value\u001b[1;34m()\u001b[0m\n",
       "\u001b[1;32mpandas\\_libs\\index.pyx\u001b[0m in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[1;34m()\u001b[0m\n",
       "\u001b[1;31mKeyError\u001b[0m: 'horizontal'"
-     ]
+     ],
+     "output_type": "error"
     }
    ],
    "source": [
@@ -2492,13 +2494,13 @@
     {
      "ename": "TypeError",
      "evalue": "ufunc 'isnan' not supported for the input types, and the inputs could not be safely coerced to any supported types according to the casting rule ''safe''",
-     "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
       "\u001b[1;32m<ipython-input-39-6c1dfbe7e09c>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0misnan\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstyle\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'vertical'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;31m#.all()\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[1;31m# np.isnan(df['eps' + '_err'].values).all()\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;31mTypeError\u001b[0m: ufunc 'isnan' not supported for the input types, and the inputs could not be safely coerced to any supported types according to the casting rule ''safe''"
-     ]
+     ],
+     "output_type": "error"
     }
    ],
    "source": [
@@ -2514,7 +2516,6 @@
     {
      "ename": "KeyError",
      "evalue": "False",
-     "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
@@ -2529,7 +2530,8 @@
       "\u001b[1;32mpandas\\_libs\\hashtable_class_helper.pxi\u001b[0m in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[1;34m()\u001b[0m\n",
       "\u001b[1;32mpandas\\_libs\\hashtable_class_helper.pxi\u001b[0m in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[1;34m()\u001b[0m\n",
       "\u001b[1;31mKeyError\u001b[0m: False"
-     ]
+     ],
+     "output_type": "error"
     }
    ],
    "source": [
@@ -2749,13 +2751,13 @@
     {
      "ename": "NameError",
      "evalue": "name 'style' is not defined",
-     "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
       "\u001b[1;32m<ipython-input-1-4321484e3de4>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mstyle\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[1;31mNameError\u001b[0m: name 'style' is not defined"
-     ]
+     ],
+     "output_type": "error"
     }
    ],
    "source": [
@@ -2914,7 +2916,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "# 内在优化 https://blog.csdn.net/qq_34739497/article/details/79600479"
    ]
   },
@@ -2941,7 +2942,7 @@
    "outputs": [],
    "source": [
     "# https://stackoverflow.com/questions/16176996/keep-only-date-part-when-using-pandas-to-datetime\n",
-    "# fiscal_pre['publish_date'] = fiscal_pre['publish_date'].dt.date\n"
+    "# fiscal_pre['publish_date'] = fiscal_pre['publish_date'].dt.date"
    ]
   },
   {
@@ -3169,7 +3170,6 @@
     }
    ],
    "source": [
-    "\n",
     "# result.loc[:, 'tdate'] = pd.to_datetime(result['tdate'])\n",
     "# result.loc[:, 'tdate'] = result['tdate'].dt.strftime('%Y%m%d')\n",
     "df = pd.to_datetime(datelist[\"date\"]).to_frame()\n",
@@ -3189,7 +3189,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    ""
+   ]
   },
   {
    "cell_type": "code",
@@ -3462,11 +3464,10 @@
     }
    ],
    "source": [
-    "\n",
     "# dates = pd.date_range('1/1/2000', periods=8)\n",
     "# dates\n",
     "\n",
-    "pd.date_range(start='2019-01-01', end='2019-03-01')\n"
+    "pd.date_range(start='2019-01-01', end='2019-03-01')"
    ]
   },
   {
@@ -3524,7 +3525,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    ""
+   ]
   },
   {
    "cell_type": "code",
@@ -3680,7 +3683,6 @@
     {
      "ename": "ValueError",
      "evalue": "The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()",
-     "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
@@ -3689,7 +3691,8 @@
       "\u001b[1;32mc:\\python27\\lib\\site-packages\\pandas\\core\\reshape\\merge.pyc\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, left, right, how, on, left_on, right_on, axis, left_index, right_index, sort, suffixes, copy, indicator, validate)\u001b[0m\n\u001b[0;32m    563\u001b[0m         (self.left_join_keys,\n\u001b[0;32m    564\u001b[0m          \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mright_join_keys\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 565\u001b[1;33m          self.join_names) = self._get_merge_keys()\n\u001b[0m\u001b[0;32m    566\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    567\u001b[0m         \u001b[1;31m# validate the merge keys dtypes. We may need to coerce\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;32mc:\\python27\\lib\\site-packages\\pandas\\core\\reshape\\merge.pyc\u001b[0m in \u001b[0;36m_get_merge_keys\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    826\u001b[0m                             \u001b[1;31m# work-around for merge_asof(right_index=True)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    827\u001b[0m                             \u001b[0mright_keys\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mright\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 828\u001b[1;33m                         \u001b[1;32mif\u001b[0m \u001b[0mlk\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0mNone\u001b[0m \u001b[1;32mand\u001b[0m \u001b[0mlk\u001b[0m \u001b[1;33m==\u001b[0m \u001b[0mrk\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    829\u001b[0m                             \u001b[1;31m# avoid key upcast in corner case (length-0)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    830\u001b[0m                             \u001b[1;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mleft\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m>\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;31mValueError\u001b[0m: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()"
-     ]
+     ],
+     "output_type": "error"
     }
    ],
    "source": [
@@ -4004,13 +4007,13 @@
     {
      "ename": "AttributeError",
      "evalue": "'module' object has no attribute 'DateFrame'",
-     "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
       "\u001b[1;32m<ipython-input-34-b7dafceadd18>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mdfc\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0miloc\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mdfc\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mDateFrame\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlist\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdfc\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[1;31mAttributeError\u001b[0m: 'module' object has no attribute 'DateFrame'"
-     ]
+     ],
+     "output_type": "error"
     }
    ],
    "source": [
@@ -4091,7 +4094,7 @@
    "source": [
     "dfa = df[[\"name\"]]\n",
     "dfa\n",
-    "# df.append(dfa, axis=0)\n"
+    "# df.append(dfa, axis=0)"
    ]
   },
   {
@@ -4136,11 +4139,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "    [tuple(x) for x in df.values]\n",
+    "[tuple(x) for x in df.values]\n",
     "    df.to_records(index=False).tolist()\n",
     "    list(map(tuple,df.values))\n",
-    "    list(map(tuple, df.itertuples(index=False)))\n"
+    "    list(map(tuple, df.itertuples(index=False)))"
    ]
   },
   {
@@ -4198,13 +4200,13 @@
     {
      "ename": "AttributeError",
      "evalue": "'FrozenList' object has no attribute 'difference'",
-     "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
       "\u001b[1;32m<ipython-input-8-33e62b940181>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdf2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgroupby\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlevel\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mdf2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnames\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdifference\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'B'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[1;31mAttributeError\u001b[0m: 'FrozenList' object has no attribute 'difference'"
-     ]
+     ],
+     "output_type": "error"
     }
    ],
    "source": [
@@ -4459,7 +4461,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    ""
+   ]
   },
   {
    "cell_type": "code",
@@ -4725,7 +4729,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "s = pd.Series(np.random.randn(8), index=index)\n"
+    "s = pd.Series(np.random.randn(8), index=index)"
    ]
   },
   {
@@ -6070,7 +6074,7 @@
    "source": [
     "# dff\n",
     "dff = dff[0:10]\n",
-    "dff\n"
+    "dff"
    ]
   },
   {
@@ -6277,7 +6281,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    ""
+   ]
   },
   {
    "cell_type": "markdown",
@@ -6567,7 +6573,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    ""
+   ]
   },
   {
    "cell_type": "code",
@@ -6816,7 +6824,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    ""
+   ]
   },
   {
    "cell_type": "markdown",
@@ -6849,13 +6859,13 @@
     {
      "ename": "NameError",
      "evalue": "name 'mean' is not defined",
-     "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
       "\u001b[1;32m<ipython-input-6-b2ecdd54d5c0>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdata\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgroupby\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0muniquekeys\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mas_index\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mFalse\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mapply\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmean\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[1;31mNameError\u001b[0m: name 'mean' is not defined"
-     ]
+     ],
+     "output_type": "error"
     }
    ],
    "source": [
@@ -8400,7 +8410,7 @@
    "outputs": [],
    "source": [
     "# as_index=False 在应用 apply函数时不生效 \n",
-    "df=data[[\"PMD_CITY\", \"PMD_COMPANYID\", \"PMD_MEDICINALINFORMATIONID\"]].groupby([\"PMD_CITY\",\"PMD_MEDICINALINFORMATIONID\"],as_index=False).apply(lambda x: \",\".join(x[\"PMD_COMPANYID\"]))\n"
+    "df=data[[\"PMD_CITY\", \"PMD_COMPANYID\", \"PMD_MEDICINALINFORMATIONID\"]].groupby([\"PMD_CITY\",\"PMD_MEDICINALINFORMATIONID\"],as_index=False).apply(lambda x: \",\".join(x[\"PMD_COMPANYID\"]))"
    ]
   },
   {
@@ -8493,7 +8503,6 @@
     {
      "ename": "ValueError",
      "evalue": "labels [1] not contained in axis",
-     "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
@@ -8502,11 +8511,11 @@
       "\u001b[1;32mc:\\python27\\lib\\site-packages\\pandas\\core\\generic.pyc\u001b[0m in \u001b[0;36m_drop_axis\u001b[1;34m(self, labels, axis, level, errors)\u001b[0m\n\u001b[0;32m   2560\u001b[0m                 \u001b[0mnew_axis\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdrop\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlabels\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlevel\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mlevel\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0merrors\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0merrors\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2561\u001b[0m             \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 2562\u001b[1;33m                 \u001b[0mnew_axis\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdrop\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlabels\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0merrors\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0merrors\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   2563\u001b[0m             \u001b[0mdropped\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreindex\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m**\u001b[0m\u001b[1;33m{\u001b[0m\u001b[0maxis_name\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mnew_axis\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2564\u001b[0m             \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;32mc:\\python27\\lib\\site-packages\\pandas\\core\\indexes\\base.pyc\u001b[0m in \u001b[0;36mdrop\u001b[1;34m(self, labels, errors)\u001b[0m\n\u001b[0;32m   3742\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0merrors\u001b[0m \u001b[1;33m!=\u001b[0m \u001b[1;34m'ignore'\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3743\u001b[0m                 raise ValueError('labels %s not contained in axis' %\n\u001b[1;32m-> 3744\u001b[1;33m                                  labels[mask])\n\u001b[0m\u001b[0;32m   3745\u001b[0m             \u001b[0mindexer\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mindexer\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m~\u001b[0m\u001b[0mmask\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3746\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdelete\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mindexer\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;31mValueError\u001b[0m: labels [1] not contained in axis"
-     ]
+     ],
+     "output_type": "error"
     }
    ],
    "source": [
-    "\n",
     "dfd = df.reset_index()\n",
     "# dfd.drop([0,1], axis=1)\n",
     "dfd.drop([\"PMD_CITY\", \"PMD_MEDICINALINFORMATIONID\"], axis=1)"
@@ -8826,14 +8835,18 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    ""
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    ""
+   ]
   },
   {
    "cell_type": "markdown",
@@ -9186,7 +9199,7 @@
     }
    ],
    "source": [
-    "data.groupby([\"PMD_CITY\"]).groups.keys() "
+    "data.groupby([\"PMD_CITY\"]).groups.keys()"
    ]
   },
   {
@@ -9232,7 +9245,7 @@
     }
    ],
    "source": [
-    "data.groupby(\"PMD_CITY\")['PMD_MEDICINALSALEMONEY'].sum() "
+    "data.groupby(\"PMD_CITY\")['PMD_MEDICINALSALEMONEY'].sum()"
    ]
   },
   {
@@ -9278,7 +9291,7 @@
     }
    ],
    "source": [
-    "data.groupby(\"PMD_CITY\")['PMD_MEDICINALSALENUMBER'].count() "
+    "data.groupby(\"PMD_CITY\")['PMD_MEDICINALSALENUMBER'].count()"
    ]
   },
   {
@@ -9545,7 +9558,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    ""
+   ]
   },
   {
    "cell_type": "code",
@@ -9931,7 +9946,7 @@
    ],
    "source": [
     "# df = df.set_index(['ticker_symbol']).loc[ticker_list]\n",
-    "# cd_con = cd_con.reset_index()\n"
+    "# cd_con = cd_con.reset_index()"
    ]
   },
   {
@@ -10074,7 +10089,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "https://stackoverflow.com/questions/48647534/python-pandas-find-difference-between-two-data-frames\n"
+    "https://stackoverflow.com/questions/48647534/python-pandas-find-difference-between-two-data-frames"
    ]
   },
   {
@@ -10136,8 +10151,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "https://www.cnblogs.com/massquantity/p/8908859.html\n",
-    "    "
+    "https://www.cnblogs.com/massquantity/p/8908859.html"
    ]
   },
   {
@@ -10155,30 +10169,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "reset_index, warning "
+    "reset_index, warning"
    ]
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3.0
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 0
 }
